# RAG_sandbox

./: .env.sample  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: RAG_app.py  rag_utils.py
